syntax = "proto3";

package eth;

service NodeCommuunications {

    rpc EventInitialAdd (UsersData) returns (ReplyInfo){
    }
        
    rpc EventAddNewAddress (WatchAddress) returns (ReplyInfo){
    }

    rpc EventGetBlockHeight (Empty) returns (BlockHeight){
    }

    rpc EventGetAllMempool (Empty) returns (stream MempoolRecord){
    }

    rpc EventAddMempoolRecord (Empty) returns (stream MempoolRecord){
    }

    rpc EventDeleteMempool (Empty) returns (stream MempoolToDelete){
    }

    rpc EventResyncAddress (AddressToResync) returns (ReplyInfo){
    }

    rpc EventSendRawTx (RawTx) returns (ReplyInfo){
    }

    rpc NewTx (Empty) returns (stream ETHTransaction){
    }

}

message ETHTransaction {
    string UserID = 1;                        
	string Hash = 2;                       
	string From = 3;                      
	string To = 4;  
    int64 Amount = 5;
	int64 GasPrice = 6;        
	int64 GasLimit = 7;          
	int32 Nonce = 8;         
	int32 Status = 9;      
    int64 BlockTime = 10;         
	int64 TxpoolTime = 11;        
	int64 BlockHeight = 12;
    bool Resync = 13;
}

message BlockHeight{
    int64 height = 1 ;
}

message MempoolToDelete {
   string hash = 1;
}

message WatchAddress {
   string address = 1;
   string userID = 2;
}

 message MempoolRecord {
   int32 category = 1;    
   string hashTX = 2;
}

message Empty {
}

message RawTx {
   string transaction = 1;
}

message AddressToResync {
   string address = 1;
}


message UsersData {
    map<string, string> map = 1;
}

message ReplyInfo {
    string message = 1;
}
